--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>About Me</h1>
       </div>
       <div class="body-content">
-        <img src="assets/images/Nature.jpg" alt="">
+        <img id="float-image" src="assets/images/Nature.jpg" alt="">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing
           elit, sed do eiusmod tempor incididunt ut labore et
           dolore magna aliqua. Ut enim ad minim veniam, quis
