--- a/portfolio.html
+++ b/portfolio.html
@@ -9,81 +9,50 @@
     <title>Basic Portfolio-Portfolio</title>
 </head>
 <body>
-    <header>
-        <div class="width-restraint">
-            <h1>Matthew Trabold</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </nav>
+  <header>
+    <div class="width-restraint">
+      <div class="brand">
+        <h1>Matthew Trabold</h1>
+      </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
+  </header>
+  <section>
+    <div class="section-width">
+      <div class="about-header">
+        <h1>My Portfolio</h1>
+      </div>
+      <div class="body-content portfolio-content">
+        <div class="portfolio-images-col">
+          <div class="image-block">
+            <img src="assets/images/backgammon.jpg" alt="">
+            <p class="image-header">Backgammon</p>
+          </div>
+          <div class="image-block">
+            <p class="image-header">Backgammon</p>
+            <img src="assets/images/backgammon.jpg" alt="">
+          </div>
         </div>
-    </header>
-    <section>
-        <div class="section-width">
-            <h1>Portfolio</h1>
+        <div class="portfolio-images-col">
+          <div class="image-block">
+            <img src="assets/images/backgammon.jpg" alt="">
+            <p class="image-header">Backgammon</p>
+          </div>
+          <div class="image-block">
+            <img src="assets/images/backgammon.jpg" alt="">
+            <p class="image-header">Backgammon</p>
+          </div>
         </div>
-        <div class="row">
-            <div class="column">
-                <div class="portfolio-block">
-                    <div class="port-block-position">
-                        <img src="assets/images/Nature.jpg" alt="">
-                        <div class=text>
-                            <p>Hangman</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="portfolio-block">
-                    <div class="port-block-position">
-                        <img src="assets/images/Nature.jpg" alt="">
-                        <div class=text>
-                            <p>Hangman</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="column">
-                <div class="portfolio-block">
-                    <div class="port-block-position">
-                        <img src="assets/images/Nature.jpg" alt="">
-                        <div class=text>
-                            <p>Hangman</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="portfolio-block">
-                    <div class="port-block-position">
-                        <img src="assets/images/Nature.jpg" alt="">
-                        <div class=text>
-                            <p>Hangman</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class = "row">
-            <div class="column">
-                <div class="portfolio-block">
-                    <div class="port-block-position">
-                        <img src="assets/images/Nature.jpg" alt="">
-                        <div class=text>
-                            <p>Hangman</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <footer>
-        <p>Copyright &#x24B8;</p>
-    </footer>
-</body>
+      </div>
+    </div>
+  </section>
+  <footer>
+      <p>Copyright &#x24B8;</p>
+  </footer>
 </html>
